Fix table width on iPhone (will shift 1 px on chrome now when selecting 1st player, unavoidable)

--- a/DodgeDynasty/Content/Site.css
+++ b/DodgeDynasty/Content/Site.css
@@ -1664,11 +1664,13 @@ ul.menu li a.current-page
 	padding-bottom: 4px;
 	border-top: 1px solid black;
 }
-.hq-empty-msg, .hq-view-spacer {
+.hq-empty-msg {
 	width: 229px;
 	white-space: normal;
 }
 .hq-view-spacer {
+	width: 227px;
+	white-space: normal;
 	height: 0px;
 }
 .hq-inner-empty-msg {
@@ -1683,7 +1685,7 @@ ul.menu li a.current-page
 	margin-bottom: 0px;
 }
 .queue-table {
-	min-width: 228px;
+	min-width: 229px;
 	padding-bottom: 0px;
 	margin-bottom: 0px;
 }
@@ -2907,11 +2909,14 @@ span.player-select
 	.hq-header {
 		max-width: 186px;
 	}
-	.hq-empty-msg, .hq-view-spacer {
+	.hq-empty-msg {
 		width: 220px;
 	}
+	.hq-view-spacer {
+		width: 218px;
+	}
 	.queue-table {
-		min-width: 219px;
+		min-width: 220px;
 	}
 		/*    -------- Compare Ranks */
 	.cr-add-compare {
